Fixed CSS overlap bug

--- a/themes/default/editor/widgets/tag/_tag.scss
+++ b/themes/default/editor/widgets/tag/_tag.scss
@@ -26,6 +26,7 @@
     margin:0;
     padding:0;
     list-style-type:none;
+    z-index:1;
   }
 
   ul.r6o-taglist {
